--- a/Bass Spotter/OneSignalNotificationServiceExtension/OneSignalNotificationServiceExtension.entitlements
+++ b/Bass Spotter/OneSignalNotificationServiceExtension/OneSignalNotificationServiceExtension.entitlements
@@ -2,13 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UIAppFonts</key>
+	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>PlusJakartaSans-VariableFont_wght.ttf</string>
-	</array>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>remote-notification</string>
+		<string>group.pkotenko.Bass-Spotter.onesignal</string>
 	</array>
 </dict>
 </plist>
